# mcap_utils

./: .cruft.json  .gitignore  README.md  pyproject.toml
src/mcap_utils/: main.py
src/mcap_utils/nuscenes_visu/: definitions.py  main.py  mcap_writer.py
src/mcap_utils/utils/: io_utils.py
src/mcap_utils/visualize_3d_points/: main.py
tests/: test_main.py
